--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "@aptos-labs/ts-sdk": "^1.3.17",
     "@aptos-labs/wallet-adapter-core": "^2.5.0",
     "@aptos-labs/wallet-adapter-react": "^1.3.2",
-    "petra-plugin-wallet-adapter": "^0.4.5",
+    "petra-plugin-wallet-adapter": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.7.1"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^28.0.6",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@types/react-router-dom": "^5.3.3",
