--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@aptos-labs/ts-sdk": "^1.3.17",
     "@aptos-labs/wallet-adapter-core": "^2.5.0",
     "@aptos-labs/wallet-adapter-react": "^1.3.2",
+    "eventemitter3": "4.0.7",
     "petra-plugin-wallet-adapter": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
