--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "tweetnacl": "1.0.3"
   },
   "devDependencies": {
+    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
+    "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
     "@rollup/plugin-commonjs": "^28.0.6",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
@@ -34,6 +36,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "typescript": "^5.0.2",
-    "vite": "^7.0.6"
+    "vite": "^7.0.6",
+    "vite-plugin-node-polyfills": "^0.24.0"
   }
 }
