--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@aptos-labs/ts-sdk": "^3.1.3",
     "@aptos-labs/wallet-adapter-core": "^7.1.1",
     "@aptos-labs/wallet-adapter-react": "^7.0.4",
+    "petra-plugin-wallet-adapter": "^0.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.7.1"
