--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "vercel-build": "npm run build"
   },
   "dependencies": {
-    "@aptos-labs/ts-sdk": "^3.1.3",
-    "@aptos-labs/wallet-adapter-core": "^3.5.0",
-    "@aptos-labs/wallet-adapter-react": "^2.1.3",
-    "@aptos-labs/wallet-standard": "^0.0.3",
+    "@aptos-labs/ts-sdk": "1.39.0",
+    "@aptos-labs/wallet-adapter-core": "3.16.0",
+    "@aptos-labs/wallet-adapter-react": "2.5.1",
+    "@aptos-labs/wallet-standard": "0.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.7.1"
